<resources>
    <string name="about_label">About app</string>
    <string name="about_summary">%1$s-%2$s</string>
    <string name="about_version">Version</string>
    <string name="all_animation">All animation</string>
    <string name="animation">Animation</string>
    <string name="app_name">Pi Clock</string>
    <string name="appearance">Appearance</string>
    <string name="auto_inactivate">Auto-deactivation</string>
    <string name="auto_inactivate_never_summary">Disabled. Toggle active mode by touching screen</string>
    <string name="auto_inactivate_summary">Hide controls and decrease brightness after %s</string>
    <string name="blink_time_separators">Blink time separators</string>
    <string name="brightness_info">Brightness %d%%</string>
    <string name="brightness_info_max">Brightness %d%% (max)</string>
    <string name="brightness_info_min">Brightness %d%% (min)</string>
    <string name="brightness_level">Brightness level</string>
    <string name="clock_always_moves_along_screen">Clock always moves along the screen</string>
    <string name="clock_moves_along_screen">Clock moves along the screen every %s</string>
    <string name="date_format">Date</string>
    <string name="default_date_format">%s (system)</string>
    <string name="default_title">Default</string>
    <string name="digital_clock">Digital clock</string>
    <string name="digits_animation_type">Digits animation type</string>
    <string name="disabled">Disabled</string>
    <string name="disabled_power_save">Disabled (power saving)</string>
    <string name="do_not_animate">Do not animate</string>
    <string name="do_not_show">Do not show</string>
    <string name="enabled">Enabled</string>
    <string name="float_animation">Floating animation type</string>
    <string name="floating">Floating</string>
    <string name="floating_interval">Floating interval</string>
    <string name="floating_speed">Floating speed</string>
    <string name="floating_speed_summary">%d%%</string>
    <string name="formats">Formats</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="fullscreen_disabled_summary">Always show system bars</string>
    <string name="fullscreen_enabled_summary">Hide system bars in inactive mode</string>
    <string name="gestures">Gestures</string>
    <string name="gestures_disabled_summary">Gestures disabled</string>
    <string name="gestures_enabled_summary">Adjust scale and brightness by swiping across the screen</string>
    <string name="hidden">Hidden</string>
    <string name="hours_minutes_format">Hours and minutes</string>
    <string name="clock_in_center">Clock always stays in center of the screen</string>
    <string name="layout">Layout</string>
    <string name="layout_specific">Layout specific</string>
    <string name="layout_type">Layout type</string>
    <string name="minutes_separator">Minutes separator</string>
    <string name="muted_brightness_summary">Muted brightness in inactive mode %d%%</string>
    <string name="on_monday">on Monday</string>
    <string name="on_sunday">on Sunday</string>
    <string name="save">Save</string>
    <string name="scale">Scale</string>
    <string name="scale_info">Scale %d%%</string>
    <string name="scale_info_max">Scale %d%% (max)</string>
    <string name="scale_info_min">Scale %d%% (min)</string>
    <string name="scale_summary">%d%%</string>
    <string name="second_hand">Second hand</string>
    <string name="seconds_format">Seconds</string>
    <string name="seconds_separator">Seconds separator</string>
    <string name="service_running">Service running</string>
    <string name="settings">Settings</string>
    <string name="settings_button">Settings button</string>
    <string name="show_time_separators">Show time separators</string>
    <string name="sound">Sound</string>
    <string name="status">Status</string>
    <string name="style">Style</string>
    <string name="tick_always">Always</string>
    <string name="tick_never">Never</string>
    <string name="tick_sound">Tick sound</string>
    <string name="tick_sound_always">Tick always</string>
    <string name="tick_sound_mode">Play tick sound when</string>
    <string name="time_separators">Time separators</string>
    <string name="user_interface">Interface</string>
    <string name="visible">Visible</string>
    <string name="week_start">Week start</string>
    <string name="clock_hands_animation">Hands animation</string>
    <string name="move_hands_smooth">Move hour and minute hands smoothly</string>
    <string name="move_hands_discretely">Move hour and minute hands discretely</string>
    <string name="hands_smooth">Smooth hands</string>
    <string name="hands">Hands</string>
    <string name="when_in">Clock is %s</string>
    <string name="digits_split_animation">Animate digits separately</string>
    <string name="digits_animation">Digits animation</string>

    <string-array name="content_layout_titles">
        <item>Digital horizontal, small seconds</item>
        <item>Digital horizontal, big seconds</item>
        <item>Digital vertical, small seconds</item>
        <item>Digital vertical, big seconds</item>
        <item>Analog minimalistic, text date</item>
        <item>Analog minimalistic, bars date</item>
    </string-array>

    <string-array name="view_digital_default_style_titles">
        <item>@string/default_title</item>
        <item>Round</item>
        <item>Square</item>
        <item>Curly</item>
        <item>Thick</item>
        <item>Typewriter</item>
        <item>Zen</item>
    </string-array>

    <string-array name="view_digital_simple_style_titles">
        <item>@string/default_title</item>
        <item>Round</item>
        <item>Square</item>
        <item>Curly</item>
        <item>Thick</item>
    </string-array>

    <string-array name="view_digital_vertical_default_style_titles">
        <item>@string/default_title</item>
        <item>Round</item>
        <item>Square</item>
        <item>Curly</item>
        <item>Thick</item>
    </string-array>

    <string-array name="view_digital_vertical_simple_style_titles">
        <item>@string/default_title</item>
        <item>Round</item>
        <item>Square</item>
        <item>Curly</item>
        <item>Thick</item>
    </string-array>

    <string-array name="view_analog_min_text_date_style_titles">
        <item>Square hands</item>
        <item>Rounded hands</item>
    </string-array>

    <string-array name="view_analog_min_bars_date_style_titles">
        <item>Square hands</item>
        <item>Rounded hands</item>
    </string-array>

    <string-array name="tick_sound_titles">
        <item>Alarm clock</item>
        <item>Tick-tick</item>
        <item>Mantle clock</item>
        <item>Wall clock</item>
        <item>Wrist watch</item>
    </string-array>

    <string-array name="auto_inactivate_delay_titles">
        <item>2 second</item>
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>Disabled</item>
    </string-array>

    <string-array name="content_float_interval_titles">
        <item>Always move</item>
        <item>10 second</item>
        <item>1 minute</item>
        <item>15 minutes</item>
        <item>Never move</item>
    </string-array>

    <string-array name="content_float_speed_titles">
        <item>0.1x</item>
        <item>0.3x</item>
        <item>0.5x</item>
        <item>1.0x</item>
        <item>2.0x</item>
        <item>5.0x</item>
    </string-array>

    <string-array name="hours_minutes_format_titles">
        <item>24-hour trailing zeroes</item>
        <item>24-hour no trailing zeroes</item>
        <item>12-hour trailing zeroes</item>
        <item>12-hour no trailing zeroes</item>
    </string-array>

    <string-array name="hours_minutes_format_hints">
        <item> (07:07)</item>
        <item> (7:07)</item>
        <item> (07:07 AM)</item>
        <item> (7:07 AM)</item>
    </string-array>

    <string-array name="seconds_format_titles">
        <item>Trailing zeroes</item>
        <item>No trailing zeroes</item>
        <item>Do not show</item>
    </string-array>

    <string-array name="seconds_format_hints">
        <item> (00:07)</item>
        <item> (00:7)</item>
        <item />
    </string-array>

    <string-array name="tick_sound_mode_titles">
        <item>Active</item>
        <item>Inactive</item>
        <item>Floating</item>
    </string-array>

    <string-array name="digits_animation_titles">
        <item>Fade through</item>
        <item>Scroll</item>
        <item>Fall</item>
        <item>Fall and bounce</item>
        <item>Cylinder</item>
        <item>Slide</item>
        <item>Slide and bounce</item>
        <item>Grow in</item>
        <item>Shrink out</item>
        <item>Grow in shrink out</item>
        <item>@string/do_not_animate</item>
    </string-array>

    <string-array name="float_animation_titles">
        <item>Move</item>
        <item>Fade</item>
        <item>Fade and move</item>
        <item>@string/do_not_animate</item>
    </string-array>

    <string-array name="clock_hand_animation_titles">
        <item>Overshot</item>
        <item>Linear</item>
        <item>@string/do_not_animate</item>
    </string-array>

</resources>
