<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="layout_specific_holder"
        android:title="@string/layout">

        <ListPreference
            android:entries="@array/content_layout_titles"
            android:entryValues="@array/content_layout_values"
            android:key="content_layout"
            android:title="@string/layout_type" />

        <!-- entries for 'content_style' are set dynamically -->
        <ListPreference
            android:key="content_style"
            android:title="@string/style" />

        <!-- dynamic preferences here -->

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/user_interface">

        <!-- 'max' attribute here must be greater than preference value, otherwise it would be reset -->
        <SeekBarPreference
            android:key="content_scale"
            android:max="10000"
            android:title="@string/scale" />

        <!-- 'max' attribute here must be greater than preference value, otherwise it would be reset -->
        <SeekBarPreference
            android:key="muted_brightness"
            android:max="10000"
            android:title="@string/brightness_level" />

        <SwitchPreferenceCompat
            android:key="gestures_enabled"
            android:title="@string/gestures" />

        <SwitchPreferenceCompat
            android:key="fullscreen_enabled"
            android:title="@string/fullscreen" />

        <com.bopr.piclock.util.ui.preference.LongListPreference
            android:entries="@array/auto_inactivate_delay_titles"
            android:entryValues="@array/auto_inactivate_delay_values"
            android:key="auto_inactivate_delay"
            android:title="@string/auto_inactivate" />

        <SwitchPreferenceCompat
            android:key="animation_on"
            android:title="@string/animation_enabled" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/floating">

        <com.bopr.piclock.util.ui.preference.LongListPreference
            android:entries="@array/content_float_interval_titles"
            android:entryValues="@array/content_float_interval_values"
            android:key="content_float_interval"
            android:title="@string/floating_interval" />

        <ListPreference
            android:entries="@array/float_animation_titles"
            android:entryValues="@array/float_animation_values"
            android:key="float_animation"
            android:title="@string/float_animation" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/sound">

        <Preference
            android:key="tick_sound"
            android:title="@string/tick_sound">
            <intent
                android:targetClass="com.bopr.piclock.BrowseSoundActivity"
                android:targetPackage="com.bopr.piclock" />
        </Preference>

        <MultiSelectListPreference
            android:entries="@array/tick_sound_mode_titles"
            android:entryValues="@array/tick_sound_mode_values"
            android:key="tick_sound_mode"
            android:title="@string/tick_sound_mode" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about_label">

        <Preference
            android:key="about_app"
            app:title="@string/about_version" />

    </PreferenceCategory>

</PreferenceScreen>
