<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="layout_specific_content">

    <PreferenceCategory android:key="layout_specific_preferences">

        <PreferenceCategory android:title="@string/formats">

            <ListPreference
                android:entryValues="@array/date_format_values"
                android:key="date_format"
                android:title="@string/date_format" >
                <!-- entry names for 'date_format' are build dynamically -->
            </ListPreference>

        </PreferenceCategory>

        <SwitchPreferenceCompat
            android:key="second_hand_visible"
            android:title="@string/second_hand" />

        <ListPreference
            android:entries="@array/clock_hand_animation_titles"
            android:entryValues="@array/clock_hand_animation_values"
            android:key="clock_hand_animation"
            android:title="@string/clock_hands_animation" />

    </PreferenceCategory>

</PreferenceScreen>
